@@ -80,13 +80,21 @@
 						<label2>[B]$INFO[Skin.String(LyricScript_Path)][/B]</label2>
 						<onclick>Skin.SetAddon(LyricScript_Path,xbmc.python.lyrics)</onclick>
 					</control>
+					<control type="radiobutton" id="50013">
+						<width>700</width>
+						<include>DialogSettingButton</include>
+						<label>  ∟$LOCALIZE[40179]</label>
+						<onclick>Skin.ToggleSetting(enable_animatedlyrics)</onclick>
+						<selected>!Skin.HasSetting(enable_animatedlyrics)</selected>
+						<visible>!String.IsEmpty(Skin.String(LyricScript_Path))</visible>
+					</control>
 					<control type="radiobutton" id="50010">
 						<width>700</width>
 						<include>DialogSettingButton</include>
 						<label>  ∟$LOCALIZE[40163]</label>
 						<onclick>Skin.ToggleSetting(Alt_color.lyrics)</onclick>
 						<selected>Skin.HasSetting(Alt_color.lyrics)</selected>
-						<visible>!String.IsEmpty(Skin.String(LyricScript_Path))</visible>
+						<visible>!String.IsEmpty(Skin.String(LyricScript_Path)) + !Skin.HasSetting(enable_animatedlyrics)</visible>
 					</control>
 					<control type="button" id="5008">
 						<width>700</width>
