@@ -108,6 +108,12 @@
 					<selected>!Skin.HasSetting(show_artistbanner)</selected>
 					<onclick>Skin.ToggleSetting(show_artistbanner)</onclick>
 				</control>
+				<control type="radiobutton" id="212">
+					<label>$LOCALIZE[40179]</label>
+					<include>DefaultSettingButton</include>
+					<onclick>Skin.ToggleSetting(enable_animatedlyrics)</onclick>
+					<selected>!Skin.HasSetting(enable_animatedlyrics)</selected>
+				</control>
 				<control type="radiobutton" id="210">
 					<label>$LOCALIZE[40086]</label>
 					<include>DefaultSettingButton</include>
@@ -121,7 +127,7 @@
 				<control type="button" id="211">
 					<label>$LOCALIZE[10041]</label>
 					<include>DefaultSettingButton</include>
-					<onclick>RunScript(script.skin.helper.service,action=dialogyesno,header=$LOCALIZE[10041],message=$LOCALIZE[10042],yesaction=Skin.Reset(show_musicvisualisation)|Skin.Reset(hide_background_fanart)|Skin.Reset(enable_artistslideshow)|Skin.Reset(animate_artistslideshow)|Skin.Reset(enable_visualisation)|Skin.Reset(show_disc)|Skin.Reset(hide_cdcase)|Skin.Reset(show_artistclearlogo)|Skin.Reset(show_artistbanner)|Skin.Reset(SkinHelper.DisableScreenSaverOnFullScreenMusic))</onclick>
+					<onclick>RunScript(script.skin.helper.service,action=dialogyesno,header=$LOCALIZE[10041],message=$LOCALIZE[10042],yesaction=Skin.Reset(show_musicvisualisation)|Skin.Reset(hide_background_fanart)|Skin.Reset(enable_artistslideshow)|Skin.Reset(animate_artistslideshow)|Skin.Reset(enable_visualisation)|Skin.Reset(show_disc)|Skin.Reset(hide_cdcase)|Skin.Reset(show_artistclearlogo)|Skin.Reset(show_artistbanner)|Skin.Reset(enable_animatedlyrics)|Skin.Reset(SkinHelper.DisableScreenSaverOnFullScreenMusic))</onclick>
 				</control>
 			</control>
 			<control type="grouplist" id="300">
