@@ -12,6 +12,7 @@
 			<include>OpenClose_Right</include>
 			<!-- ** Required ** Do not change <id> or <type> (Smooth scrolling list for lyrics) -->
 			<control type="list" id="110">
+				<visible>!Skin.HasSetting(enable_animatedlyrics)</visible>
 				<centerleft>50%</centerleft>
 				<top>45</top>
 				<width>400</width>
@@ -38,6 +39,67 @@
 						<label fallback="--">$INFO[ListItem.Label]</label>
 					</control>
 				</focusedlayout>
+			</control>
+			<control type="group">
+				<visible>Skin.HasSetting(enable_animatedlyrics)</visible>
+				<control type="image">
+					<right>30</right>
+					<top>48</top>
+					<width>1019</width>
+					<height>510</height>
+					<texture background="true">dialogs/back.png</texture>
+				</control>
+				<control type="list" id="110">
+					<right>55</right>
+					<top>48</top>
+					<width>965</width>
+					<height>500</height>
+					<onleft>111</onleft>
+					<onright>111</onright>
+					<onup>110</onup>
+					<ondown>110</ondown>
+					<pagecontrol>111</pagecontrol>
+					<scrolltime>200</scrolltime>
+					<itemlayout height="56">
+						<control type="label">
+							<left>0</left>
+							<top>0</top>
+							<width>975</width>
+							<height>56</height>
+							<font>font14</font>
+							<aligny>center</aligny>
+							<align>center</align>
+							<label fallback="--">$INFO[ListItem.Label]</label>
+						</control>
+					</itemlayout>
+					<focusedlayout height="56">
+						<control type="label">
+							<left>0</left>
+							<top>0</top>
+							<width>975</width>
+							<height>56</height>
+							<font>font14</font>
+							<aligny>center</aligny>
+							<align>center</align>
+							<shadowcolor>black</shadowcolor>
+							<label fallback="--">$INFO[ListItem.Label]</label>
+							<visible>!Control.HasFocus(110)</visible>
+						</control>
+						<control type="label">
+							<left>0</left>
+							<top>0</top>
+							<width>965</width>
+							<height>56</height>
+							<font>font14</font>
+							<aligny>center</aligny>
+							<align>center</align>
+							<shadowcolor>black</shadowcolor>
+							<textcolor>$VAR[SkinColorVar]</textcolor>
+							<label fallback="--">$INFO[ListItem.Label]</label>
+							<visible>Control.HasFocus(110)</visible>
+						</control>
+					</focusedlayout>
+				</control>
 			</control>
 			<!-- ** Required ** Do not change <id> or <type> (Song Chooser if it gets it wrong) -->
 			<control type="group">
@@ -72,13 +134,14 @@
 								<height>70</height>
 								<textoffsetx>40</textoffsetx>
 								<aligny>center</aligny>
+								<align>left</align>
 								<label>$INFO[ListItem.Label]</label>
 							</control>
 							<control type="label">
 								<width>700</width>
 								<height>70</height>
 								<textoffsetx>40</textoffsetx>
-								<align>left</align>
+								<align>right</align>
 								<aligny>center</aligny>
 								<label>$INFO[ListItem.Label2]</label>
 							</control>
@@ -96,6 +159,7 @@
 								<height>70</height>
 								<textoffsetx>40</textoffsetx>
 								<aligny>center</aligny>
+								<align>left</align>
 								<label>$INFO[ListItem.Label]</label>
 							</control>
 							<control type="label">
@@ -133,7 +197,7 @@
 		<!-- ** Required ** Do not change <id> or <type> -->
 		<!-- ** Required ** Do not change <id> or <type> -->
 		<control type="group">
-			<visible>!String.IsEmpty(Container(110).ListItem.Label)</visible>
+			<visible>!String.IsEmpty(Container(110).ListItem.Label) + !Skin.HasSetting(enable_animatedlyrics)</visible>
 			<visible>!Control.IsVisible(120)</visible>
 			<animation effect="slide" end="320,0" time="0" condition="String.IsEqual(Skin.AspectRatio,21:9)">Conditional</animation>
 			<animation effect="slide" end="-110,120" condition="!Player.ShowInfo + !Window.IsVisible(musicosd)">Conditional</animation>
